# jarvis

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
config/: command_map.yaml
docs/: readme.md
src/: main.rs
src/core/: commander.rs  constants.rs  jarvis_signals.rs  mod.rs  speech_recognizer.rs
src/errors/: jarvis_error.rs  mod.rs
src/model/: command.rs  command_action.rs  command_map.rs  command_subject.rs  intent.rs  mod.rs
src/processing/: classifier.rs  feedback_generator.rs  intent_executor.rs  microphone_listener.rs  mod.rs  recognizer.rs  speech_synthesizer.rs  vad_chunker.rs  wake_word_detector.rs
src/traits/: labelable.rs  mod.rs
