[package]
name = "jarvis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
panic = 'abort'

[dependencies]
whisper-rs = "*"
cpal = "*"
rodio = "*"
hound = "*"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = "2.2"
reqwest = { version = "0.12.5", features = ["blocking"] }
bytes = "1.6"
rust_tokenizers = "8.1.1"
rust-bert = { git = "https://github.com/guillaume-be/rust-bert", rev = "f99bf51f532d6d2ef5dfb05e21c536897888afd4" }
tch = "0.15.0"
rand = "0.8.0"
anyhow = "1.0.68"